--- a/packages/woonkamer_keuken.yaml
+++ b/packages/woonkamer_keuken.yaml
@@ -10,6 +10,8 @@ homeassistant:
       icon: mdi:ceiling-light
     light.eettafel:
       icon: mdi:ceiling-light
+    switch.kerstboom:
+      icon: mdi:pine-tree
     switch.woonkamer_staandelamp:
       hidden: true
     switch.woonkamer_tv_backlight:
@@ -82,7 +84,7 @@ automation:
           entity_id: zwave.minimote
           scene_id: 1
     action:
-      - service: homeassistant.turn_on
+      - service: homeassistant.toggle
         entity_id: light.woonkamer_zithoek
   - id: mini_2_pressed
     alias: 'Minimote Button 2 Pressed'
@@ -93,8 +95,9 @@ automation:
           entity_id: zwave.minimote
           scene_id: 3
     action:
-      - service: homeassistant.turn_off
-        entity_id: light.woonkamer_zithoek
+      - service: homeassistant.toggle
+        entity_id: light.dressoir_dimmer
+#        entity_id: switch.kerstboom
   - id: mini_3_pressed
     alias: 'Minimote Button 3 Pressed'
     trigger:
@@ -104,8 +107,8 @@ automation:
           entity_id: zwave.minimote
           scene_id: 5
     action:
-      - service: homeassistant.turn_on
-        entity_id: light.keuken
+      - service: homeassistant.toggle
+        entity_id: light.woonkamer_plafond
   - id: mini_4_pressed
     alias: 'Minimote Button 4 Pressed'
     trigger:
@@ -115,6 +118,17 @@ automation:
           entity_id: zwave.minimote
           scene_id: 7
     action:
-      - service: homeassistant.turn_off
+      - service: homeassistant.toggle
         entity_id: light.keuken
+  - id: mini_4_held
+    alias: 'Minimote Button 4 Held'
+    trigger:
+      - platform: event
+        event_type: zwave.scene_activated
+        event_data:
+          entity_id: zwave.minimote
+          scene_id: 8
+    action:
+      - service: scene.turn_on
+        entity_id: scene.welterusten
 
