--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,11 +1,13 @@
 title: Bleekweg 28
 
 resources:
-  - url: /local/monster-card.js?v=1
+  - url: /local/monster-card.js?v=0.2.3
     type: js
-  - url: /local/slider-entity-row.js?v=1
+  - url: /local/slider-entity-row.js?v=d6da75
     type: js
-  - url: /local/popup-card.js?v=1
+  - url: /local/popup-card.js?v=02923e
+    type: js
+  - url: /local/tracker-card.js?v=0.1.5
     type: js
 
 views:
@@ -249,6 +251,11 @@ views:
   - title: System
     icon: mdi:settings
     cards:
+      - type: custom:tracker-card
+        title:
+        trackers:
+          - sensor.custom_component_tracker
+          - sensor.custom_card_tracker
       - type: custom:monster-card
         card:
           title: Pi Processes
