Fix twentemilieu sensors

--- a/packages/twentemilieu.yaml
+++ b/packages/twentemilieu.yaml
@@ -1,13 +1,13 @@
 homeassistant:
   customize:
     sensor.twentemilieu_groente_fruit_en_tuinafval:
-      entity_picture: /local/green_icon.svg
+      entity_picture: /local/icons/gft_80.png
     sensor.twentemilieu_papier_en_karton:
-      entity_picture: /local/paper_icon.svg
+      entity_picture: /local/icons/papier_80.png
     sensor.twentemilieu_pmd:
-      entity_picture: /local/packages_icon.svg
+      entity_picture: /local/icons/plastic_80.png
     sensor.twentemilieu_restafval:
-      entity_picture: /local/grey_icon.svg
+      entity_picture: /local/icons/restafval_80.png
 
 sensor:
   - platform: twentemilieu
