Twentemilieu fixes next pickup sensor

--- a/packages/twentemilieu.yaml
+++ b/packages/twentemilieu.yaml
@@ -18,3 +18,8 @@ sensor:
       - PACKAGES
     postcode: 7512BZ
     streetnumber: 28
+
+#  - platform: template
+#    sensors:
+#      twentemilieu_volgende_ophaaldag:
+#        friendly_name: Afval vandaag
