--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -14,7 +14,7 @@ http_password: "null"
 
 duckdns_accesstoken: "null"
 
-zwave_network_key: "null"
+zwave_network_key: "0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00"
 
 postnl_username: "null"
 postnl_password: "null"
