--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
 python:
-  - "3.5"
+  - "3.6"
 before_install:
+  - sudo apt-get install -y libudev-dev
   - mv travis_secrets.yaml secrets.yaml
   - touch ssl_key.pem ssl_cert.pem
 install:
