--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -18,3 +18,6 @@ zwave_network_key: "0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
 
 postnl_username: "null"
 postnl_password: "null"
+
+honeywell_username: "null"
+honeywell_password: "null"
